Bug 478089 - Previews in the size dropdown have wrong sizes when using a scale factor
Summary: Previews in the size dropdown have wrong sizes when using a scale factor
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_cursortheme (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
: 478370 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-05 03:57 UTC by Jin Liu
Modified: 2024-01-24 15:54 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Adwaita (67.42 KB, image/png)
2023-12-05 03:57 UTC, Jin Liu
Details
Breeze (104.54 KB, image/png)
2023-12-05 03:57 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2023-12-05 03:57:11 UTC
Created attachment 163887 [details]
Adwaita

SUMMARY
See attachments. Different sizes seem to be rendered as the same. E.g. 48 and 64 in Adwaita, 48, 54 and 60 in (patched) Breeze.

Global scale: 250%

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.6.3-arch1-1 (64-bit)
Graphics Platform: offscreen
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Jin Liu 2023-12-05 03:57:31 UTC
Created attachment 163888 [details]
Breeze
Comment 2 Nate Graham 2023-12-05 17:19:31 UTC
Looks like they are unscaled?
Comment 3 Jin Liu 2023-12-05 23:20:41 UTC
(In reply to Nate Graham from comment #2)
> Looks like they are unscaled?

Yes. Unscaled, and some are of wrong sizes.
Comment 4 fanzhuyifan 2023-12-11 06:01:59 UTC
*** Bug 478370 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2024-01-21 05:25:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3798
Comment 6 fanzhuyifan 2024-01-24 15:30:46 UTC
Git commit 09151f64266adb60114dfa8c7cf628917cf7f20c by Yifan Zhu.
Committed on 24/01/2024 at 16:18.
Pushed by fanzhuyifan into branch 'master'.

kcms/cursortheme: Fix cursor size preview

On wayland the cursor size is in logical pixels, so don't divide by
the device pixel ratio.

Respect the actual icon size, which is different from the cursor size.
FIXED-IN: 6.0

M  +13   -0    kcms/cursortheme/kcmcursortheme.cpp
M  +1    -0    kcms/cursortheme/kcmcursortheme.h
M  +7    -2    kcms/cursortheme/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/09151f64266adb60114dfa8c7cf628917cf7f20c
Comment 7 fanzhuyifan 2024-01-24 15:54:35 UTC
Git commit 52695bab269542bc53601b3d3f6c246206bd4054 by Yifan Zhu.
Committed on 24/01/2024 at 16:37.
Pushed by fanzhuyifan into branch 'Plasma/6.0'.

kcms/cursortheme: Fix cursor size preview

On wayland the cursor size is in logical pixels, so don't divide by
the device pixel ratio.

Respect the actual icon size, which is different from the cursor size.
FIXED-IN: 6.0
(cherry picked from commit 09151f64266adb60114dfa8c7cf628917cf7f20c)

M  +13   -0    kcms/cursortheme/kcmcursortheme.cpp
M  +1    -0    kcms/cursortheme/kcmcursortheme.h
M  +7    -2    kcms/cursortheme/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/52695bab269542bc53601b3d3f6c246206bd4054