kcms/cursortheme: Fix cursor size preview

On wayland the cursor size is in logical pixels, so don't divide by
the device pixel ratio.

Respect the actual icon size, which is different from the cursor size.

BUG: 478089
FIXED-IN: 6.0
(cherry picked from commit 09151f64266adb60114dfa8c7cf628917cf7f20c)